// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine edge md exist, no schema file: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine edge md exist, no schema file: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": "TODO",
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": "TODO",
  },
]
`;

exports[`engine edge no md file, no schema : listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine edge no md file, no schema : main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": "TODO",
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": "TODO",
  },
]
`;

exports[`engine edge no md file, schema exist: fooNote 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": "TODO",
  "data": Object {
    "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
  },
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": "TODO",
}
`;

exports[`engine edge no md file, schema exist: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine edge no md file, schema exist: main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": "TODO",
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": "TODO",
  },
]
`;

exports[`engine edge note without fm: fooNote 1`] = `
Object {
  "body": "this is foo",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": "TODO",
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": "TODO",
}
`;

exports[`engine edge note without id: fooNote 1`] = `
Object {
  "body": "this is foo
",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": "TODO",
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": "TODO",
}
`;

exports[`engine main sanity: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": "TODO",
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": "TODO",
  },
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": "TODO",
  },
]
`;
